tests/N3Tests/jen3_syntax/neg/iri1.n3
@prefix : <iri1.n3#>.
@base <http://example.org/> .

<http://spaces are ok/> :is :false .